almost entirely finished

--- a/intro.bib
+++ b/intro.bib
@@ -3382,9 +3382,9 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 }%!
 
 @book{jahangir1999,
-  author    = {Jahangir, Salīm Nūruddīn},
+  %author    = {Jahangir, Salīm Nūruddīn},
   title     = {The Jahangirnama: Memoirs of Jahangir, Emperor of India},
-  translator = {Wheeler M. Thackston},
+  editor    = {Wheeler, M. Thackston},
   year      = {1999},
   publisher = {Oxford University Press},
   address   = {New York},
