--- a/preamble.tex
+++ b/preamble.tex
@@ -524,4 +524,10 @@ surname=Liersch]
 
 \providecommand\phantomsection{}
 
+%%%Komma für die mehrfachen Fußnoten in der Ekdosis umgebung
+
 \newcommand\fnsep{\textsuperscript{,}}
+
+%%%für die includegraphics füllhorn am anfang
+
+%\usepackage{floatpag}
