yo fertig echt jetzt allde

--- a/intro.tex
+++ b/intro.tex
@@ -71,7 +71,13 @@ Gutachter:\\\\
 Prof. Dr. Jürgen Hanneder\\\noindent
 Prof. Dr. James Mallinson\\
 
-\thispagestyle{empty} 
+\thispagestyle{empty}
+
+%\newpage
+%\thispagestyle{empty}
+%\mbox{}
+%\newpage
+
 \newpage
 
   \thispagestyle{empty}
@@ -121,12 +127,12 @@ Das dritte Kapitel dieser Arbeit beinhaltet eine auf Differenzhermeneutik basier
 \newpage
 \listoftables
 \thispagestyle{empty}
-\cleardoublepage
+\newpage
 
-\section*{Acknowledgements}
+\section{Acknowledgements}
 %\phantomsection
-\addcontentsline{toc}{chapter}{Acknowledgements}
-\thispagestyle{empty} % Verhindert Seitenzahl auf der Seite
+%\addcontentsline{toc}{chapter}{Acknowledgements}
+\pagestyle{empty} % Verhindert Seitenzahl auf der Seite
 \lettrine{M}{y} interest in the \textit{Yogatattvabindu} stems from my desire to utilize Sanskrit philology to uncover new source texts of yoga traditions and advance our knowledge of the history of yoga. My passion for philological work was inspired by Dr. Patrick McAllister, whose seminar titled ``Text Criticism in Indological Studies'' I attended with great enthusiasm during the winter semester of 2014/2015 at the University of Heidelberg. As an aspiring Indologist, yoga enthusiast, and yoga teacher, the Haṭha Yoga Project (HYP)\footnote{For more information about the ERC-funded \citetitle{hyp-website} (2015-2020), see \url{http://hyp.soas.ac.uk/} (Alternatively: \url{https://web.archive.org/web/20240516171430/http://hyp.soas.ac.uk/}; saved on archive.org: 04.10.2023).}, which began in 2015, was the most exciting Indological venture I could imagine. This research project, funded by the European Research Council and based at SOAS, University of London, with Prof. Dr. James Mallinson as the principal investigator and his team comprising Dr. Mark Singleton, Dr. Jason Birch, Dr. Daniela Bevilaqua, and Dr. S. V. B. K. V. Gupta, aimed primarily at producing critical editions and annotated translations of ten Sanskrit texts of Haṭhayoga. Consequently, I decided to produce a critical edition of the \emph{Gorakṣayogaśāstra}, another early Haṭhayoga text, as part of my master's thesis.
 During the work on this edition, I met Dr. Jason Birch at the Yoga Studies Summer School (YSSS) at Jagiellonian University in Krakow, held between 21.07.2017 and 05.08.2017. Since then, he has supported my work in every possible way. My gratitude goes especially to him, as my Indological career would have taken a different path without his help and encouragement. After completing my master's thesis, the results of which I presented at the World Sanskrit Conference 2018 in Vancouver, Canada, I also met Dr. James Mallinson. Soon after, I found myself on the island of Procida in southern Italy, fortunate to be invited to the two-week \emph{Amṛtasiddhi} workshop of the HYP. In Procida, Dr. Jason Birch inspired me to work on the \emph{Yogatattvabindu} and provided me with the first manuscripts of the text he had collected. The exploration of the overarching theme of complex yoga taxonomies, presented right at the beginning of the text, seemed very promising for advancing Indological yoga research. At another HYP workshop in spring 2019, focused on the \emph{Yogabīja} at the University of Marburg, I met Prof. Dr. Jürgen Hanneder, who promptly agreed to supervise my dissertation on the \emph{Yogatattvabindu}. I am very grateful for his continuous support, philological expertise, and encyclopedic knowledge.
 
@@ -139,6 +145,7 @@ Additionally, I would like to thank all the previously unmentioned participants 
 My special thanks go to my beloved partner and mother of my two children, Melanie Amaya, who supported me in every possible way to finish this dissertation. I also want to thank my two beloved daughters, Luna and Kaya, who motivated me daily to complete this work.
 
 \mainmatter
+\pagestyle{defaultstyle}
 \counterwithout{footnote}{chapter}
 \counterwithout{figure}{chapter}
 \counterwithout{table}{chapter}
@@ -174,14 +181,14 @@ The third chapter contains a comparative analysis of the complex early modern yo
 
 \lettrine{R}{āmacandra's} \emph{Yogatattvabindu} can be divided into 59 sections. Many of these sections are brief, consisting of only a few sentences or lists of specific contents or concepts the author wishes to convey. However, some sections are significantly longer. Almost every section is introduced with clearly identifiable section markers. In these cases, a section begins with recognisable phrases such as \textit{atha}, \textit{idānīm} or \textit{idam}. Sometimes, sections start without section markers. Nevertheless, the thematic shifts were so significant that I, as the editor, felt obliged to mark these passages as separate sections.\footnote{This specifically pertains to sections \uproman{6}, \uproman{7}, \uproman{14}, \uproman{17}, and \uproman{41}.} The wording of the text remains entirely unchanged.
 
-By far, the largest part of the text deals with explaining various yogas. Of the fifteen yogas, presented as methods of Rājayoga\footnote{See p. \pageref{intro}.} mentioned in the introduction, Rāmacandra explains only eight in the course of the text. These are Rājayoga, Kriyāyoga, Siddha[kuṇḍalinī]yoga, Mantrayoga, Lakṣyayoga, Haṭhayoga, and Jñānayoga. Surprisingly, there are also three additional yogas not listed among the fifteen initially mentioned: Aṣṭāṅgayoga, Satyayoga, and Sahajayoga. The individual yogas, both those explicitly described and those merely mentioned in the taxonomy, are thoroughly discussed in the chapter ``Comparative analysis of the complex early modern yoga taxonomies''.\footnote{See p. \pageref{yogatax}.} This chapter analyses and compares them with the three other texts containing complex yoga taxonomies, particularly to conclude the significance of the complex yoga taxonomies in the history of yoga.
+By far, the largest part of the text deals with explaining various yogas. Of the fifteen yogas, presented as methods of Rājayoga\footnote{See p. \pageref{intro}.} mentioned in the introduction, Rāmacandra explains only eight in the course of the text. These are Rājayoga, Kriyāyoga, Siddha[kuṇḍalinī]yoga, Mantrayoga, Lakṣyayoga, Haṭhayoga, and Jñānayoga. Surprisingly, there are also three additional yogas not listed among the fifteen initially mentioned: Aṣṭāṅgayoga, Satyayoga, and Sahajayoga. The individual yogas, both those explicitly described and those merely mentioned in the taxonomy, are thoroughly discussed in the chapter ``Comparative Analysis of the Complex Early Modern Yoga Taxonomies''.\footnote{See p. \pageref{yogatax}.} This chapter analyses and compares them with the three other texts containing complex yoga taxonomies, particularly to conclude the significance of the complex yoga taxonomies in the history of yoga.
 
 Beyond the discussion of the fifteen yogas, there are further contents. The other major subject is the yogic body. In sections \uproman{25}-\uproman{26}, Rāmacandra names, describes and explains the functions of the ten physical channels (\textit{nāḍī}s) and the ten vital winds (\textit{vāyu}s). In sections \uproman{32}-\uproman{41}, he postulates the identity of the universe (\textit{brahmāṇḍa}) and the body (\textit{piṇḍa}). Following this, Rāmacandra lists numerous macrocosmic elements within the body: the worlds (\textit{loka}s), rulers of the worlds (\textit{lokasvāmin}s), seven islands (\textit{dvīpa}s), seven oceans (\textit{samudra}s), nine regions (\textit{khaṇḍa}s), eight major mountains (\textit{parvata}s), nine rivers (\textit{nāḍī}s), twenty-seven constellations (\textit{nakṣatra}s), and so on. Structurally, Rāmacandra simply names the macrocosmic element and then locates it in the body. Finally, in sections \uproman{55}-\uproman{57}, Rāmacandra lists the digits (\textit{kalā}s) of the moon (\textit{candra}), sun (\textit{sūrya}), and fire (\textit{agni}). Another significant component of the \emph{Yogatattvabindu} is a variant of a set of teachings that can be traced back to an ancient Śaiva paradigm.\footnote{\emph{Yogatattvabindu} \uproman{28}.1: \textit{navacakraṃ kalādhāraṃ trilakṣyaṃ vyomapaṃcakaṃ} | \textit{svadehe yo na jānāti sa yogī nāmadhārakaḥ} || Variants of this verse are found in numerous yoga texts with a Śaiva orientation and older Śaiva Tantras. I discuss this ancient Śaiva paradigm on p. \pageref{saivaparadigm}.} This set consists of teachings on \textit{cakras},\footnote{A total of nine \textit{cakra}s, along with meditation instructions on these, are described in detail in sections \uproman{4}-\uproman{12}. In section \uproman{29}, nine \textit{cakra}s are listed again, but only with names and locations.} \textit{ādhāra}s,\footnote{The sixteen containers (\textit{ādhāra}s) are described in section \uproman{30}. These include specific locations suitable for meditation and \textit{bandha} techniques.} \textit{lakṣya}s,\footnote{The \emph{Yogatattvabindu} includes five meditative foci (\textit{lakṣya}s), which are collectively referred to as the Rājayoga method Lakṣyayoga. The chapters of the sub-variants are found in sections \uproman{13}-\uproman{15} and \uproman{23}-\uproman{24}.} and \textit{vyoma}s or \textit{ākāśa}s.\footnote{These are five meditative spaces that the Yogi can traverse, described in section \uproman{28}.}
 
-Other topics include a description of the tamed Avadhūta,\footnote{The original archetype of the antinomian ascetic is tamed in \uproman{44}.} and a description of the division of the heart lotus (\textit{hṛdayakamala}), whose reception can be traced back to the teachings of the Śaiva exegetes of Kashmir.\footnote{See sections \uproman{45}-\uproman{47}.} Other sections discuss a pentadic cosmogony \footnote{See sections \uproman{48}-\uproman{54}.}, or the importance of the teacher (\textit{guru}) for yoga practice.\footnote{See sections \uproman{43}-\uproman{58}.} The work concludes with a lengthy section titled the ``Secret teaching of the scriptures of yoga in all of the scriptures'' (\textit{yogaśāstrarahasya samagraśāstramadhye}), which primarily concerns the ultimate yoga teaching for those called \textit{cakravartin}, namely Sahajayoga. This yoga enables the practitioner to enjoy all the benefits of yoga without the need to practice it. Table \ref{ytb-topics} provides an overview of all contents of the \emph{Yogatattvabindu}, arranged by sections:
+Other topics include a description of the tamed Avadhūta,\footnote{The original archetype of the antinomian ascetic is tamed in \uproman{44}.} and a description of the division of the heart lotus (\textit{hṛdayakamala}), whose reception can be traced back to the teachings of the Śaiva exegetes of Kashmir.\footnote{See sections \uproman{45}-\uproman{47}.} Other sections discuss a pentadic cosmogony \footnote{See sections \uproman{48}-\uproman{54}.}, or the importance of the teacher (\textit{guru}) for yoga practice.\footnote{See sections \uproman{43} and \uproman{58}.} The work concludes with a lengthy section titled the ``Secret teaching of the scriptures of yoga in all of the scriptures'' (\textit{yogaśāstrarahasya samagraśāstramadhye}), which primarily concerns the ultimate yoga teaching for those called \textit{cakravartin}, namely Sahajayoga. This yoga enables the practitioner to enjoy all the benefits of yoga without the need to practice it. Table \ref{ytb-topics} provides an overview of all contents of the \emph{Yogatattvabindu}, arranged by sections:
 \newpage
 \footnotesize
-\begin{longtable}{p{0.08\textwidth} p{0.4\textwidth} p{0.52\textwidth}}
+\begin{longtable}{p{0.08\textwidth} p{0.4\textwidth} p{0.48\textwidth}}
     \caption[Topics of the \emph{Yogatattvabindu}]{Topics of the \emph{Yogatattvabindu}} \\
     \toprule
     \textbf{Section} & \textbf{Topic in Sanskrit} & \textbf{Topic in IAST} \\
@@ -609,7 +616,7 @@ In the critical edition of the \emph{Yogatattvabindu}, the author's sources are 
 
 \subsubsection{Yogasvarodaya}
  \phantomsection\label{svaro}
-The \emph{Yogasvarodaya} (YSv) is the main source text, and Rāmacandra's \emph{Yogatattvabindu}. Rāmacandra derives most of his content from this text and even follows its structure to a great extent. The majority of sections in the \emph{Yogatattvabindu} result from Rāmacandra rewriting the \emph{śloka}s of the \emph{Yogasvarodaya} into prose, incorporating specific editorial changes to align with his agenda. Thus, this text is of utmost importance for the reconstruction of the \emph{Yogatattvabindu}'s doubtful passages. The text will be described in detail in the chapter ``Comparative analysis of the complex early modern yoga taxonomies''.\footnote{See p. \pageref{yogasvarodayadescription}.} Hence, another treatment would be redundant. So far, the \emph{Yogasvarodaya} is a text known solely through quotations found in the \emph{Prāṇatoṣiṇī} and \emph{Yogakaṇikā}, which will be described below. Manuscripts have yet to be found and remain a desideratum for the time being. 
+The \emph{Yogasvarodaya} (YSv) is the main source text, and Rāmacandra's \emph{Yogatattvabindu}. Rāmacandra derives most of his content from this text and even follows its structure to a great extent. The majority of sections in the \emph{Yogatattvabindu} result from Rāmacandra rewriting the \emph{śloka}s of the \emph{Yogasvarodaya} into prose, incorporating specific editorial changes to align with his agenda. Thus, this text is of utmost importance for the reconstruction of the \emph{Yogatattvabindu}'s doubtful passages. The text will be described in detail in the chapter ``Comparative Analysis of the Complex Early Modern Yoga Taxonomies''.\footnote{See p. \pageref{yogasvarodayadescription}.} Hence, another treatment would be redundant. So far, the \emph{Yogasvarodaya} is a text known solely through quotations found in the \emph{Prāṇatoṣiṇī} and \emph{Yogakaṇikā}, which will be described below. Manuscripts have yet to be found and remain a desideratum for the time being. 
 
 \subsubsection{Prāṇatoṣiṇī}
  \phantomsection\label{tosi}
@@ -894,7 +901,7 @@ The translation is arranged parallel to the critical edition on the recto side o
 \end{itemize}
 
 \newpage
-\subsection{Sigla in the critical apparatuses}
+\subsection{Sigla in the critical apparatus}
 
 \begin{itemize}
 \item \alpha : \getsiglum{D}, \getsiglum{N1}, \getsiglum{N2}, \getsiglum{U1}
@@ -918,8 +925,10 @@ The translation is arranged parallel to the critical edition on the recto side o
 \item YSv : \emph{Yogasvarodaya}
 \end{itemize}
 
-\chapter{Critical Edition \& Annotated Translation}
-\cleardoublepage
+\chapter[Critical Edition \& Annotated Translation of the \emph{Yogatattvabindu}]{The \emph{Yogatattvabindu} of Rāmacanda \\ \huge  
+Critical Edition \& Annotated Translation}
+\pagestyle{chapter2style}
+\clearpage
 \begin{alignment}[
   texts=edition[class="edition"];
   translation[class="translation"],
@@ -6518,7 +6527,7 @@ Whether [one has] new clothes made of silk, or old, worn [clothes] with holes, w
                \xmlhead[h18]{[XVIII. Caryāyoga]}
       \phantomsection\label{caryayogatrans}
      \begin{tlate}[p18_01]
-\noindent Now, Caryāyoga is explained.\footnote{Caryāyoga is absent in the YSv (PT and YK). Rāmacandra, however, utilises a passage that in YSv belongs to the section on Rājayoga to construe this type of yoga. Due to its brevity, it might be an attempt to do justice to the list of yogas provided in the beginning (cf. PT, p. 835: \textit{harṣaśokau} \ldots \textit{samo 'pi ca} |). The passage's content does not explain why Rāmacandra uses the term \textit{caryā°} to specify this type of yoga. The introduction of Caryāyoga into the list of fifteen yogas is based on the respective \textit{pāda} among the four \textit{pāda}s of the śaivaite Āgamas, which bear the same names as the first four yogas in Rāmacandra's list of fifteen yogas (\textit{kriyā}-, \textit{jñāna}-, \textit{caryā}- and \textit{yogapāda}). Perhaps, in this context, the concept of \textit{caryā°} = √\textit{car} + \textit{kṛt}-suffix \textit{-yā} f. might express the action, which refers to the meaning ``wandering, roaming'' of the verbal root √\textit{car}, which Rāmacandra brings up in his description. There is no connection to ritual conduct/discipline of śaivite practices. I discuss the Caryāyoga category of the complex taxonomies on p. \pageref{caryayogaintro}.} Formless, permanent, immovable [and] unsplittable - such is the self. For whose mind remains steady in such a self, his self does not come into contact with sin and merit. Just as contact with water does not arise for the lotus leaf situated in water, likewise in the [case of the] self. When the mind is absorbed into the formless,\footnote{The term \textit{nirākāra} was already used in the second sentence of this section as an adjective qualifying the self (\textit{ātman}). Here, it is a noun and probably synonymous with the self.} in the same way as the wind wanders according to its own will in space, only that is Caryāyoga.\footnote{Parallels to Rāmacandra's innovative Caryāyoga can be identified in the texts with similar taxonomies. In \citetitle{yogacandrika} (Ed. pp. 2, 52-53, 100-101, 150) Nārāyaṇatīrtha presents Caryāyoga in the context of \emph{Yogasūtra} 1.33. According to Nārāyaṇatīrtha's commentary, the practice of this involves the cultivation of specific mental attitudes, such as \textit{maitrī} (``loving-kindness''), \textit{karuṇā} (``compassion''), \textit{muditā} (``compassionate joy'') and \textit{upekṣā} (``equanimity''), towards circumstances characterised by happiness, suffering, virtue and vice. Sundardās, in his \citetitle{sarvangayoga} (2.40-51, Ed. pp. 96-98), describes the similar sounding Cārcāyoga as a type of \textit{bhaktiyoga} that is \textit{bhakti} towards the unmanifest consciousness (\textit{avyakta puruṣa}) in rapturous devotion. According to Sundardās, the unmanifest consciousness (\textit{avyakta puruṣa}) is formless, eternal, etc. (40). However, in Sanskrit and \textit{brājbhāṣā} the term means ``discussion''. Thus Caryāyoga and Carcāyoga are unrelated. An analysis of Caryāyoga can be examined on p. \pageref{caryayogaintro}.} 
+\noindent Now, Caryāyoga is explained.\footnote{Caryāyoga is absent in the YSv (PT and YK). Rāmacandra, however, utilises a passage that in YSv belongs to the section on Rājayoga to construe this type of yoga. Due to its brevity, it might be an attempt to do justice to the list of yogas provided in the beginning (cf. PT, p. 835: \textit{harṣaśokau} \ldots \textit{samo 'pi ca} |). The passage's content does not explain why Rāmacandra uses the term \textit{caryā°} to specify this type of yoga. The introduction of Caryāyoga into the list of fifteen yogas is based on the respective \textit{pāda} among the four \textit{pāda}s of the śaivaite Āgamas, which bear the same names as the first four yogas in Rāmacandra's list of fifteen yogas (\textit{kriyā}-, \textit{jñāna}-, \textit{caryā}- and \textit{yogapāda}). Perhaps, in this context, the concept of \textit{caryā°} = √\textit{car} + \textit{kṛt}-suffix \textit{-yā} f. might express the action, which refers to the meaning ``wandering, roaming'' of the verbal root √\textit{car}, which Rāmacandra brings up in his description. There is no connection to ritual conduct/discipline of śaivite practices.} Formless, permanent, immovable [and] unsplittable - such is the self. For whose mind remains steady in such a self, his self does not come into contact with sin and merit. Just as contact with water does not arise for the lotus leaf situated in water, likewise in the [case of the] self. When the mind is absorbed into the formless,\footnote{The term \textit{nirākāra} was already used in the second sentence of this section as an adjective qualifying the self (\textit{ātman}). Here, it is a noun and probably synonymous with the self.} in the same way as the wind wanders according to its own will in space, only that is Caryāyoga.\footnote{Parallels to Rāmacandra's innovative Caryāyoga can be identified in the texts with similar taxonomies. In \citetitle{yogacandrika} (Ed. pp. 2, 52-53, 100-101, 150) Nārāyaṇatīrtha presents Caryāyoga in the context of \emph{Yogasūtra} 1.33. According to Nārāyaṇatīrtha's commentary, the practice of this involves the cultivation of specific mental attitudes, such as \textit{maitrī} (``loving-kindness''), \textit{karuṇā} (``compassion''), \textit{muditā} (``compassionate joy'') and \textit{upekṣā} (``equanimity''), towards circumstances characterised by happiness, suffering, virtue and vice. Sundardās, in his \citetitle{sarvangayoga} (2.40-51, Ed. pp. 96-98), describes the similar sounding Cārcāyoga as a type of \textit{bhaktiyoga} that is \textit{bhakti} towards the unmanifest consciousness (\textit{avyakta puruṣa}) in rapturous devotion. According to Sundardās, the unmanifest consciousness (\textit{avyakta puruṣa}) is formless, eternal, etc. (40). However, in Sanskrit and \textit{brājbhāṣā} the term means ``discussion''. Thus Caryāyoga and Carcāyoga are unrelated. An analysis of Caryāyoga can be examined on p. \pageref{caryayogaintro}.} 
        \flushpage
      \end{tlate}
    \end{translation}
@@ -22653,7 +22662,8 @@ Thus concludes the \textit{Yogatattvabindu},\footnote{I consider it necessary to
   \end{translation}
 \end{alignment}
 
-\chapter[Comparative analysis of the compley yoga taxonomies]{Comparative analysis of the complex early modern yoga taxonomies}
+\chapter[Comparative Analysis of the Complex Yoga Taxonomies]{Comparative Analysis of the Complex Early Modern Yoga Taxonomies}
+\pagestyle{defaultstyle}
 %\setcounter{footnote}{449}
 \phantomsection\label{yogas_list}
 \phantomsection\label{yogatax}
