--- a/preamble.tex
+++ b/preamble.tex
@@ -2,7 +2,7 @@
 \setstocksize{220mm}{155mm} 	        
 \settrimmedsize{220mm}{155mm}{*}	
 \settypeblocksize{170mm}{116mm}{*}	
-\setlrmargins{23.5mm}{*}{*}
+\setlrmargins{18mm}{*}{*}
 \setulmargins{*}{*}{1.2}
 %\setlength{\headheight}{5pt}%
 \checkandfixthelayout[lines]
@@ -26,7 +26,7 @@
 
 % Definiere einen speziellen Seitenstil für Kapitel 2
 \makepagestyle{chapter2style}
-\makeevenhead{chapter2style}{\thepage}{}{Chapter 2. The \emph{Yogatattvabindu} of Rāmacandra.}
+\makeevenhead{chapter2style}{\thepage}{}{Chapter 2. The \emph{Yogatattvabindu} of Rāmacandra}
 \makeoddhead{chapter2style}{Critical Edition \& Annotated translation}{}{\thepage}
 \makeevenfoot{chapter2style}{}{}{}
 \makeoddfoot{chapter2style}{}{}{}
