kleinere Korrekturen post Abgabe

--- a/intro.bib
+++ b/intro.bib
@@ -733,7 +733,7 @@ keywords={seclit},
 
 @misc{mrgendragama,
  title={Mṛgendrāgama},
- subtitle={Mṛgendrāgama (Kriyāpada and Caryāpada) with the Comm. by Bhaṭṭa Nārāyaṇa Kaṇṭha}, 
+ subtitle={Mṛgendrāgama (Kriyāpāda and Caryāpāda) with the Comm. by Bhaṭṭa Nārāyaṇa Kaṇṭha}, 
  editor={Bhatt, N. R.}, 
  publisher={Institut Français de Pondichéry},
  note={Pondicherry}, 
@@ -3975,7 +3975,7 @@ address={Delhi},
   title={Gorakṣayogaśāstra},
   subtitle={Das Gorakṣayogaśāstra: Diplomatische und kritische Edition mit annotierter Übersetzung (Forthcoming)},
   editor={Liersch, Nils Jacob},
-  publisher={Indica et Tibetica Verlang},
+  publisher={Indica et Tibetica Verlag},
   note={Marburg},
   keywords={primary},
   }%!
