corrections of JH

--- a/intro.tex
+++ b/intro.tex
@@ -837,7 +837,7 @@ The critical apparatus consists of five layers, not all of which are populated o
 The numbering of all layers of the apparatus and the lemmata follows the line numbering. This applies to both prose passages and verses. Every line is counted, and every fifth line of the text is numbered on the far left margin. The numbering is bold and blue to aid the reader's navigation in the apparatus.
 When present, the first layer of the apparatus displays the source texts. It should be noted that Rāmacandra does not adopt the sources verbatim but often converts verses into prose and occasionally adds or omits information according to his agenda. When Rāmacandra incorporates verses, he usually makes editorial changes. According to the schema, variables in the source texts are indicated in round brackets following the affected word.
 
-In the second layer, if available, testimonia are recorded. In the third layer, if available, parallel passages that are helpful or informative for the reconstruction of the text are noted. All texts used in these first three layer are consistently cited. If these texts are only available in manuscript form, the entry begins with the title, followed by an abbreviation for the location, the Ms. No., in round brackets (e.g., MMPP 2244 f. 99r l. 1-2). When the passage of the source, the testimonia or the parallel is identical, it is preceded by the equal sign (=). The approximate sign (\approx) is used instead when the passage is approximate to a certain degree. 
+In the second layer, if available, testimonia are recorded. In the third layer, if available, parallel passages that are helpful or informative for the reconstruction of the text are noted. All texts used in these first three layers are consistently cited. If these texts are only available in manuscript form, the entry begins with the title, followed by an abbreviation for the location, the Ms. No., in round brackets (e.g., MMPP 2244 f. 99r l. 1-2). When the passage of the source, the testimonia or the parallel is identical, it is preceded by the equal sign (=). The approximate sign (\approx) is used instead when the passage is approximate to a certain degree. 
 
 The fourth layer contains the critical apparatus. The critical apparatus is positive. Each lemma begins with the corresponding line number, followed by the selected reading. The selected reading is followed by one or more sigla that contain this reading. The closing square bracket separates this from the variants that follow. These are presented with the reading followed by the siglum. The selected reading is always highlighted in bold. The abbreviation ``cett.'' has been introduced to keep the critical apparatus concise. It stands for the Latin \textit{ceteri}, meaning literally ``the rest,'' and refers to all other witnesses except those named for each lemma. This entry can appear only once per lemma. Here is an example:
 
@@ -845,9 +845,9 @@ The fourth layer contains the critical apparatus. The critical apparatus is posi
   \textbf{indriyavikāraḥ} cett.] iṃdriyaṃ vīkāraḥ P iti vikāraḥ L
   \end{quote}
 
-When the selected reading results from an emendation (em.) or a conjecture (conj.), the corresponding abbreviation appears instead of a witness, a group of witnesses (\beta\hspace{1ex} or\hspace{1ex} \gamma), or the \textit{ceteri} (cett.) abbreviation before the square bracket. If the emendation or conjecture is attributed to a colleague, the colleague's surname is printed in uppercase letters before the abbreviation. If the reasoning behind the conjecture is not self-explanatory, it is explained in the annotations. The plus sign (+) represents illegible or missing letters due to manuscript damage. Given the manageable number of textual witnesses, all variants are recorded in the lemmata of the critical apparatus. If words or sentences are omitted (om.), this is always noted in the corresponding entry before the respective siglum.
-However, in cases of larger \textit{lacunae}, such as the \textit{lacunae} in \getsiglum{N1} and \getsiglum{N2}, which encompass 23,50\% of the total text, I have opted to omit to record each omission in the apparatus for the sake of a more concise critical apparatus. For these cases, I have documented this in the last register of the apparatus, which informs about the beginning and end of larger gaps in the text, with a note that the large \textit{lacunae} for this section are not included in the critical apparatus. In addition to comments regarding omissions, the last layer also contains information about transpositions of passages and other such details.
-According to the conventions of recent publications of critical editions of Yoga texts\footnote{See, for example, \emph{Amṛtasiddhi} (2021), \emph{Śivayogapradīpikā} (2023), or \emph{Amaraugha} and \emph{Amaraughaprabodha} (2024).}, the lemmata in the critical apparatus, as well as all sources, testimonia, and parallels, are set in Roman transliteration.
+When the selected reading results from an emendation (em.) or a conjecture (conj.), the corresponding abbreviation appears instead of a witness, a group of witnesses (\beta\hspace{1ex} or\hspace{1ex} \gamma), or the \textit{ceteri} (cett.) abbreviation before the square bracket. If the emendation or conjecture is attributed to a colleague, the colleague's surname is printed in uppercase letters before the abbreviation. If the reasoning behind the conjecture is not self-explanatory, it is explained in the annotations. The plus sign (+) represents illegible or missing letters due to manuscript damage. Given the manageable number of textual witnesses, all variants are recorded in the critical apparatus. If words or sentences are omitted (om.), this is always noted in the corresponding entry before the respective siglum.
+However, in cases of larger \textit{lacunae}, such as the \textit{lacunae} in \getsiglum{N1} and \getsiglum{N2}, which encompass 23,50\% of the total text, I have opted not to record each omission in the apparatus for the sake of a more concise critical apparatus. For these cases, I have documented this in the last register of the apparatus, which informs about the beginning and end of larger gaps in the respective witness, with a note that the large \textit{lacunae} for this section are not included in the critical apparatus. In addition to comments regarding omissions, the last layer also contains information about transpositions of passages and other such details.
+According to the conventions of recent publications of critical editions of Yoga texts\footnote{See, for example, \emph{Amṛtasiddhi} (2021), \emph{Śivayogapradīpikā} (2023), or \emph{Amaraugha} and \emph{Amaraughaprabodha} of Gorakṣanātha (2024).}, the lemmata in the critical apparatus, as well as all sources, testimonia, and parallels, are set in Roman transliteration.
 
 \subsection{Guide to the translation and annotations}
 
@@ -869,7 +869,7 @@ The translation is arranged parallel to the critical edition on the recto side o
 \item[f.] folio
 \item[ff.] folios
 \item[GOML] Government Oriental Manuscript Library (Chennai)
-\item[HANNEDER] Prof. Dr. Jürgen Hanndeder
+\item[HANNEDER] Prof. Dr. Jürgen Hanneder
 \item[IBID.] Ibidem
 \item[IFP] French Institute of Pondicherry
 \item[IGNCA] Indira Gandhi National Centre for the Arts (Delhi)
@@ -4026,7 +4026,7 @@ In the middle of it, there is a streak that looks like the manifestation of smok
 \xmlhead[h12]{[XII. mahāśūnyacakram]}
 \phantomsection
 \addcontentsline{toc}{section}{XII. mahāśūnyacakram}
-\phantomsection\label{cakra9}
+\phantomsection\label{cakra9}s
     \begin{prose}[p12_01]
       \noindent
 %---------------------
@@ -6844,8 +6844,8 @@ idānīṃ
 \app{\lem[wit={ceteri}]{svaśarīre}
   \rdg[wit={U1}]{svaśarīraṃ}}
 \app{\lem[wit={ceteri}]{koṭisūryatejaḥ}
-  \rdg[wit={U2}]{koṭisūryye tejaḥ}}
-\app{\lem[wit={ceteri}]{samānaṃ}
+  \rdg[wit={U2}]{koṭisūryye tejaḥ}a
+}\app{\lem[wit={ceteri}]{samānaṃ}
   \rdg[wit={B,L}]{samāna°}}
   \app{\lem[wit={ceteri}]{śvetaṃ}
   \rdg[wit={B}]{śveta°}}
@@ -15974,7 +15974,7 @@ Whatever he sees united, he is one [with it]. \textbf{\Large{\sic*{}}}\ldots\tex
       \paragraph{\uproman{44}.7} Śakti shines forth as expansion and as contraction.\footnote{Rāmacandra has borrowed the verse from the \citetitle{ssplonavla} and redacted it. The transmission of the manuscripts introduces \textit{bhāskara} (``sun'') instead of the source text's \textit{bhāsate}, and \textit{vāsara} (``day'') instead of \textit{prasara}. As this makes little sense even with much imagination, I emend the text according to the source. However, the editorial change from \textit{śivaḥ} to \textit{'pi ca} should be retained as this aligns with Rāmacandra's previous redactions of his source texts, where he strives not to mention specific deities by name. In this passage, he also seems to consider SSP 4.19: \textit{sarvaśaktiprasarasaṅkocābhyāṃ jāgatsṛṣṭiḥ saṃhṛtiś ca bhavaty eva na sandehaḥ} | \textit{tasmāt tāṃ mūlam ity ucyate} | ``There is no doubt that the creation and destruction of the world result from the expansion and contraction of Sarvaśakti.'' This teaching appears to be associated with \citetitle{kubji1988} 11.40-43.} He who unites those two, he experiences true yoga.\footnote{For a discussion of Satyayoga see p. \pageref{satyayoga}.} 
     \end{tlate}
     \begin{tlate}[44_8]
-      \paragraph{\uproman{44}.8} He whose world shines forth as only one, as a result of transcending the world through constant union with her [Śakti], is called a perfected yogin.
+      \paragraph{\uproman{44}.8} Through that the universe shines forth as only one, as a result of being beyond the universe. One who is always united with it is said to be a prefected yogin.
     \end{tlate}
     \begin{tlate}[44_9]
       \paragraph{\uproman{44}.9} He who forgets all inherent fluctuations [of the mind],\footnote{\emph{Siddhasiddhāntapaddhati} (cf. sources) glosses the description with \textit{laya} instead of \textit{vismṛti} in order to simplify the terminology: ``[When] the flow of all one's fluctuations [of the mind] assumes [the state of] absorption, one is called a mighty Siddhayogin according to the doctrine of the Siddhas.'' In \citetitle{hathapradipika2024} 4.25*25 (4.34 in the Vulgate of the \textit{Haṭhapradīpikā}) \textit{laya} is defined as \textit{viṣayavismṛti}: \textit{apunarvāsanotthānāl layo viṣayavismṛtiḥ} |} he is called a perfected yogin according to the doctrine of the Siddhas.
@@ -22793,7 +22793,7 @@ The yoga system in the \emph{Sarvāṅgayogapradīpikā} is divided into three m
 
 Sundardās' system emphasises the interconnectedness and complementarity of these yogas, which all converge towards his ultimate goal of Advaitayoga, his system's final limb (\textit{aṅga}).\phantomsection\label{sundarascetics}  
 
-Sundardās also describes practices that he rejects (1.12-49). He emphasises his disdain for the six philosophical schools (1.11). In other verses, he shows a strong anti-ritualistic attitude and mocks ritual practices, ascetic performances, Jain rites and quacks. He criticises groups such as the \textit{kāpālikā}s, \textit{paśupata}s and other ascetics and denounces their extreme behaviour.\footnote{For example, Sundardās writes in \emph{Sarvāṅgayogapradīpikā} 1.34: 
+Sundardās also describes practices that he rejects (1.12-49). He emphasises his disdain for the six philosophical schools (1.11). In other verses, he shows a strong anti-ritualistic attitude and mocks ritual practices, ascetic performances, Jain rites and quacks. He criticises groups such as the \textit{kāpālikā}s, \textit{pāśupata}s and other ascetics and denounces their extreme behaviour.\footnote{For example, Sundardās writes in \emph{Sarvāṅgayogapradīpikā} 1.34: 
 \textit{kecit kaṃda mūla khani khāhīṃ, ekāeka rahaiṃ bana māhīṃ} \textit{kecit kāsāyadika pahiraiṃ, japahiṃ jāpa paiṭhahiṃ jala gaharaiṃ}|| ``Some dig up roots and bulbs and eat them, and live alone in the forest. Others wear saffron robes, recite mantras and sit in deep water.'' Similarly, in \emph{Sarvāṅgayogapradīpikā} 1.40, he remarks: \textit{kecit meghāḍambara baiṭhaiṃ, śīta kāla jalasāī paiṭhaiṃ} | \textit{kecit dhūma pāna kari bhūlaiṃ, auṃdhe hoi bṛccha sauṃ jhūlaiṃ} || ``Some sit on mountain peaks like clouds, in the cold season they lie in the water. Some breath smoke [and] digress, [some are] hanging upside down from trees.''} He never explains the practices of the latter groups as yogas but as doctrines (\textit{mata}s).
 
 Sundardās recognises and distances himself from what he considers heretical and glorifies the teachings of his master, Dādū. His adoration for the Guru is evident in his writings, which are imbued with personal devotion.
